updated runelite-plugin.properties file

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Hit Counter
+author=itripnotic
+description=Tracks your hits on NPCs and displays the count as an overlay
+tags=npc,combat,pvm,boss,hit,infobox,monster,overlay,attack,damage,hit,track
+plugins=com.attackcounter.AttackCounterPlugin
