Final update with all changes

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Hit Counter
 author=itripnotic
 description=Tracks your hits on NPCs and displays the count as an overlay
 tags=npc,combat,pvm,boss,hit,infobox,monster,overlay,attack,damage,hit,track
-plugins=com.attackcounter.AttackCounterPlugin
+plugins=com.hitcounter.HitCounterPlugin
